--- a/view/pizzaria.html
+++ b/view/pizzaria.html
@@ -20,9 +20,24 @@
     <p></p>
     Bairro: <input type="text" name="bairro" />
     <p></p>
-    Ponto de referência: <input type="text" name="pontoref" />
-    <p></p> -->
-    
+    Ponto de referência: <input type="text" name="pontoRef" />
+    <p></p> 
+    <input type="submit" name="enviar" value="enviar"
+    </form> />-->
+
+    <!-- Assim mostra oq foi inserido no campo
+    <script>
+        function mostrarEndereco(){
+            var endereco = document.getElementById("endereco").value;
+            display_message.innerHTML= endereco;
+        }
+    </script>
+        <form>
+            Enter message: <input type="text" id = "endereco">
+            <input type="button" onclick="mostrarEndereco()" value="enviar" />
+            </form>
+            <p> Message is: <span id = "display_message"></span> </p>
+     -->
 // O tamanho da pizza ()
     (Pequena 20cm  - R$25,00), (Media 25cm  - R$30,00), (Gigante 35cm  - R$40,00), (Familia 40cm  - R$45,00)
  // Tipo de borda ()
@@ -37,24 +52,26 @@
     (Lombo Canadense) - Mussarela, Lombo Canadense, Tomate, Orégano, Cebola
     (X-Fritas) - Mussarela, Contra-filé, Presunto, Bacon, Ovo, Tomate, Cebola, Batata Frita
 // Bebidas (Apenas uma) ()
-
+(Coca Cola  - R$12,00), (Fanta - R$10,00), (Guaraná Antarctica  - R$10,00), (H2O  - R$8,00), (Del Valle  - R$7,00)
 // Tipo de entrega ()
+(Retirada no Balcão - R$0,00), (Delivery  - R$5,00)
+
 <body>
 <div class = "div1">
     <h1><p><center>Web Pizza</center></p></h1>
 </div>
 <div class = "div2">
-    <p><h4><center>Seja Bem Vindo(a) ao sistema de pedidos da Web Pizza!</center></h4></p>
+    <p><h3><center>Seja Bem Vindo(a) ao sistema de pedidos da Web Pizza!</center></h3></p>
 </div>
 <div class = "div3">
-    <p>Por favor, escolha o tamanho da pizza:</p>
+    <p><h4>Por favor, escolha o tamanho da pizza:</h4></p>
     <input type="radio" id="pequena" name="tamanho" value="pequena" onclick="escolherTamanho()"/> Pequena 20cm  - R$25,00<br/>
     <input type="radio" id="media" name="tamanho" value="media" onclick="escolherTamanho()"/> Media 25cm  - R$30,00<br/>
     <input type="radio" id="gigante" name="tamanho" value="gigante" onclick="escolherTamanho()"/> Gigante 35cm  - R$40,00<br/>
     <input type="radio" id="familia" name="tamanho" value="familia" onclick="escolherTamanho()"/> Familia 40cm  - R$45,00<br/>
 </div>
 <div class = "div4">
-    <p>Agora escolha o tipo de borda:</p>
+    <p><h4>Agora escolha o tipo de borda:</h4></p>
     <input type="radio" id="gorgonzola" name="borda" value="gorgonzola" onclick="escolherBorda()"/> Gorgonzola  - R$10,00<br/>
     <input type="radio" id="provolone" name="borda" value="provolone" onclick="escolherBorda()"/> Provolone  - R$8,00<br/>
     <input type="radio" id="catupiry" name="borda" value="catupiry" onclick="escolherBorda()"/> Catupiry  - R$5,00<br/>
@@ -62,8 +79,39 @@
     <input type="radio" id="semBorda" name="borda" value="semBorda" onclick="escolherBorda()"/> Sem borda  - R$0,00<br/>
 </div>
 <div class = "div5">
-    <p>Escolha o 1° sabor de pizza:</p>
-    
+    <p><h4>Escolha o 1° sabor de pizza:</h4></p>
+    <input type="radio" id="calabresa" name="pizza" value="calabresa" onclick="escolherPizzaUm()"><strong>Calabresa</strong><br> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Mussarela, Calabresa e cebola<br/>
+    <input type="radio" id="4 queijos" name="pizza" value="4 queijos" onclick="escolherPizzaUm()"><strong>4 Queijos</strong><br> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Mussarela, Cheddar, Parmesão e Prato<br/>
+    <input type="radio" id="frangoCatupiry" name="pizza" value="frangoCatupiry" onclick="escolherPizzaUm()"><strong>Frango com Catupiry</strong><br> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Mussarela, Frango e Catupiry<br/>
+    <input type="radio" id="portuguesa" name="pizza" value="portuguesa" onclick="escolherPizzaUm()"><strong>Portuguesa</strong><br> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Mussarela, Pimentão, Cebola, Presunto, Ovo, Cebola<br/>
+    <input type="radio" id="camarao" name="pizza" value="camarao" onclick="escolherPizzaUm()"><strong>Camarão</strong><br> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Mussarela, Camarão, Salsinha e Cebolinha<br/>
+    <input type="radio" id="carneSeca" name="pizza" value="carneSeca" onclick="escolherPizzaUm()"><strong>Carne Seca</strong><br> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Mussarela, Carne seca e cream cheese<br/>
+    <input type="radio" id="lomboCanadense" name="pizza" value="lomboCanadense" onclick="escolherPizzaUm()"><strong>Lombo Canadense</strong><br> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Mussarela, Lombo Canadense, Tomate, Orégano, Cebola<br/>
+    <input type="radio" id="xFritas" name="pizza" value="xFritas" onclick="escolherPizzaUm()"><strong>X-Fritas</strong><br> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Mussarela, Contra-filé, Presunto, Bacon, Ovo, Tomate, Cebola, Batata Frita<br/>
+</div>
+<div class = "div5">
+    <p><h4>Escolha o 2° sabor de pizza:</h4></p>
+    <input type="radio" id="calabresa" name="pizza" value="calabresa" onclick="escolherPizzaDois()"><strong>Calabresa</strong><br> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Mussarela, Calabresa e cebola<br/>
+    <input type="radio" id="4 queijos" name="pizza" value="4 queijos" onclick="escolherPizzaDois()"><strong>4 Queijos</strong><br> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Mussarela, Cheddar, Parmesão e Prato<br/>
+    <input type="radio" id="frangoCatupiry" name="pizza" value="frangoCatupiry" onclick="escolherPizzaDois()"><strong>Frango com Catupiry</strong><br> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Mussarela, Frango e Catupiry<br/>
+    <input type="radio" id="portuguesa" name="pizza" value="portuguesa" onclick="escolherPizzaDois()"><strong>Portuguesa</strong><br> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Mussarela, Pimentão, Cebola, Presunto, Ovo, Cebola<br/>
+    <input type="radio" id="camarao" name="pizza" value="camarao" onclick="escolherPizzaDois()"><strong>Camarão</strong><br> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Mussarela, Camarão, Salsinha e Cebolinha<br/>
+    <input type="radio" id="carneSeca" name="pizza" value="carneSeca" onclick="escolherPizzaDois()"><strong>Carne Seca</strong><br> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Mussarela, Carne seca e cream cheese<br/>
+    <input type="radio" id="lomboCanadense" name="pizza" value="lomboCanadense" onclick="escolherPizzaDois()"><strong>Lombo Canadense</strong><br> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Mussarela, Lombo Canadense, Tomate, Orégano, Cebola<br/>
+    <input type="radio" id="xFritas" name="pizza" value="xFritas" onclick="escolherPizzaDois()"><strong>X-Fritas</strong><br> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Mussarela, Contra-filé, Presunto, Bacon, Ovo, Tomate, Cebola, Batata Frita<br/>
+</div>
+<div class = "div6">
+    <p><h4>Gostaria de incluir uma bebida?</h4></p>
+    <input type="radio" id="semBebida" name="bebida" value="semBebida" onclick="escolherBebida()"/> Não<br/>
+    <input type="radio" id="cocaCola" name="bebida" value="cocaCola" onclick="escolherBebida()"/> Coca Cola - R$12,00<br/>
+    <input type="radio" id="fanta" name="bebida" value="fanta" onclick="escolherBebida()"/> Fanta - R$10,00<br/>
+    <input type="radio" id="guaranaAntarctica" name="bebida" value="guaranaAntarctica" onclick="escolherBebida()"/> Guaraná Antarctica - R$10,00<br/>
+    <input type="radio" id="delValle" name="bebida" value="delValle" onclick="escolherBebida()"/> Del Valle - R$7,00<br/>
+</div>
+<div class = "div7">
+    <p><h4>Escolha o tipo de entrega:</h4></p>
+    <input type="radio" id="retirada" name="entrega" value="retirada" onclick="escolherEntrega()"/> Retirada no balcão - R$0,00<br/>
+    <input type="radio" id="delivery" name="entrega" value="delivery" onclick="escolherEntrega()"/> Delivery - R$5,00<br/>
 </div>
     <script src="./../js/script.js"></script>
 </body>
