--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
   /* background-image: url("https://i.ibb.co/7kdw56k/webpizzatransp.png"); */
-  background-image: url("https://i.ibb.co/94mMnXp/webpizza30.png");
+  background-image: url("../img/webpizza30.png");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
