versao quase numero 99999

--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,412 @@
+html {
+  line-height: 1.15;
+  -webkit-text-size-adjust: 100%;
+}
+
 body {
-  /* background-image: url("../img/webpizza30.png"); */
+  margin: 0;
+}
+
+img {
+  border-style: none;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+html,
+body,
+div,
+span,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+a,
+em,
+img,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+article,
+footer,
+header,
+nav,
+section,
+main {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  vertical-align: baseline;
+}
+
+*,
+:before,
+:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.container {
+  width: 960px;
+  margin: 0 auto;
+  padding: 0;
+  position: relative;
+}
+
+.container:after,
+.container:before {
+  content: " ";
+  display: table;
+}
+.container:after {
+  clear: both;
+}
+.grid-1,
+.grid-2,
+.grid-3,
+.grid-4,
+.grid-5,
+.grid-6,
+.grid-7,
+.grid-8,
+.grid-9,
+.grid-10,
+.grid-11,
+.grid-12,
+.grid-13,
+.grid-14,
+.grid-15,
+.grid-16,
+.grid-1-3 {
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+.grid-1 {
+  width: 40px;
+}
+.grid-2 {
+  width: 100px;
+}
+.grid-3 {
+  width: 160px;
+}
+.grid-4 {
+  width: 220px;
+}
+.grid-5 {
+  width: 280px;
+}
+.grid-6 {
+  width: 340px;
+}
+.grid-7 {
+  width: 400px;
+}
+.grid-8 {
+  width: 460px;
+}
+.grid-9 {
+  width: 520px;
+}
+.grid-10 {
+  width: 580px;
+}
+.grid-11 {
+  width: 640px;
+}
+.grid-12 {
+  width: 700px;
+}
+.grid-13 {
+  width: 760px;
+}
+.grid-14 {
+  width: 820px;
+}
+.grid-15 {
+  width: 880px;
+}
+.grid-16 {
+  width: 940px;
+}
+.grid-1-3 {
+  width: 300px;
+}
+@media only screen and (min-width: 788px) and (max-width: 979px) {
+  .container {
+    width: 768px;
+  }
+  .grid-1 {
+    width: 28px;
+  }
+  .grid-2 {
+    width: 76px;
+  }
+  .grid-3 {
+    width: 124px;
+  }
+  .grid-4 {
+    width: 172px;
+  }
+  .grid-5 {
+    width: 220px;
+  }
+  .grid-6 {
+    width: 268px;
+  }
+  .grid-7 {
+    width: 316px;
+  }
+  .grid-8 {
+    width: 364px;
+  }
+  .grid-9 {
+    width: 412px;
+  }
+  .grid-10 {
+    width: 460px;
+  }
+  .grid-11 {
+    width: 508px;
+  }
+  .grid-12 {
+    width: 556px;
+  }
+  .grid-13 {
+    width: 604px;
+  }
+  .grid-14 {
+    width: 652px;
+  }
+  .grid-15 {
+    width: 700px;
+  }
+  .grid-16 {
+    width: 748px;
+  }
+  .grid-1-3 {
+    width: 236px;
+  }
+}
+@media only screen and (max-width: 787px) {
+  .container {
+    width: 300px;
+  }
+  .grid-1,
+  .grid-2,
+  .grid-3,
+  .grid-4,
+  .grid-5,
+  .grid-6,
+  .grid-7,
+  .grid-8,
+  .grid-9,
+  .grid-10,
+  .grid-11,
+  .grid-12,
+  .grid-13,
+  .grid-14,
+  .grid-15,
+  .grid-16,
+  .grid-1-3 {
+    width: 300px;
+    margin: 0 0 20px;
+    float: none;
+  }
+}
+
+.header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background: #008f39;
+  padding: 10px 0;
+  z-index: 10;
+}
+.header_menu {
+  text-align: right;
+}
+.header_menu ul li {
+  display: inline-block;
+  margin-left: 15px;
+  margin-top: 23px;
+}
+.header_menu ul li a {
+  color: #000;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  font-size: 14px;
+  line-height: 20px;
+  padding: 10px 0;
+}
+.header_menu ul li a:hover {
+  color: #fff;
+}
+.header_menu ul li a.menu_ativo {
+  color: #fff;
+}
+/* .introducao {
+  width: 100%;
+  height: 180px;
+  background-color: #ee3a43;
+  margin-top: 80px;
+  text-align: center;
+  padding: 20px 0;
+}
+.introducao h1 {
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 48px;
+  font-weight: 700;
+  margin-bottom: 23px;
+} */
+.quote-externo {
+  max-width: 250px;
+  margin: 0 auto;
+  margin-bottom: 34px;
+  color: #fff;
+}
+.quote-externo p {
+  font-style: italic;
+}
+.quote-externo p::before,
+.quote-externo p::after {
+  content: "";
+  display: block;
+  width: 60px;
+  height: 3px;
+  background: #fff;
+  margin: 10px auto;
+}
+.quote-externo cite {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+}
+
+.principal{
+  background-image: url("../img/webpizza30.png");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
 }
 
-/* .div8 input {
+.div2 h3 {
+  margin-top: 120px;
+    /* text-transform: uppercase; */
+    font-size: 28px;
+    font-weight: 700;
+    margin-bottom: 40px;
+}
+
+.div3, .div4, .div5, #textArea, .div6, .div7, .div8, .div9, .pagamento, .din, .endereco, .div11{
+  margin-bottom: 20px;
+}
+
+.div3 p, .div4 p, .div5 p, #textArea p, .div6 p, .div7 p, .div8 p, .div9 p{
+  padding-bottom: 10px;
+}
+
+.div11 input {
+  border: 4px solid #008f39;
+  padding: 9px 18px;
+  color: #008f39;
+  font-size: 14px;
+  line-height: 20px;
+  text-transform: uppercase;
+  /* letter-spacing: 0.1em; */
+  /* font-weight: 700; */
+}
+.div11 input:hover {
+  color: #ee3a43;
+  border-color: #ee3a43;
+}
+
+.quebra_com_imagem {
+  width: 100%;
+  height: 120px;
+  background-color: #008f39;
+  background-size: cover;
+  text-align: center;
+}
+.quebra_com_imagem .quote-externo {
+  max-width: 480px;
+  padding-top: 8px;
+  margin-bottom: 0;
+}
+
+.footer {
+  width: 100%;
+  background: #000;
+}
+.footer h3 {
+  font-size: 18px;
+  line-height: 20px;
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: 0.1em;
+  margin-top: 20px;
+  color: #008f39;
+}
+.footer h3::after {
+  content: "";
   display: block;
-  width: 30%;
-  border: 4px solid #fec63e;
-  margin-bottom: 10px;
-  background: none;
-  color: white;
-  padding: 4px 10px;
-  outline: none;
-  font-size: 12px;
+  width: 60px;
+  height: 3px;
+  background: #008f39;
+  margin: 10px 0 15px;
+}
+.footer p {
+  color: #fff;
+  max-width: 400px;
+  padding-bottom: 25px;
+}
+.footer_contato ul li {
   font-family: Georgia, "Times New Roman", Times, serif;
-} */
+  font-size: 14px;
+  line-height: 20px;
+  color: #fff;
+  max-width: 200px;
+}
+.footer_historia {
+  padding-right: 40px;
+}
+.footer_redes ul li {
+  display: inline-block;
+  margin-right: 10px;
+}
+.footer_redes ul li a {
+  border: 3px solid #008f39;
+  display: block;
+  padding: 6px;
+}
+.footer_redes ul li a:hover {
+  border-color: #fff;
+}
+.direitos {
+  width: 100%;
+  height: 40px;
+  background: #008f39;
+  padding: 12px 0;
+}
 
