--- a/view/pizzaria.html
+++ b/view/pizzaria.html
@@ -13,7 +13,7 @@
     <header class=" header">
         <div class="container">
           <a href="index.html" class="grid-4">
-            <img src="img/imagem-original-logo.jpeg" alt="logo">
+            <img src="./../img/imagem-original-logo.jpeg" alt="logo">
           </a>
           <nav class="grid-12 header_menu">
             <ul>
@@ -26,13 +26,7 @@
       
       <section class="principal">
         <div class="container">
-          <!-- <div class="div1">
-            <h1>
-              <p>
-                <center>Web Pizzas</center>
-              </p>
-            </h1>
-          </div> -->
+        
           <div class="div2">
             <p>
             <h3>
@@ -269,9 +263,9 @@
             <div class="grid-4 footer_redes">
               <h3>redes sociais</h3>
               <ul>
-                <li><a href="http://facebook.com" target="_blank"><img src="img/facebook.png" alt="icone facebook"></a></li>
-                <li><a href="http://instagram.com" target="_blank"><img src="img/instagram.png" alt="icone instagram"></a></li>
-                <li><a href="http://twitter.com" target="_blank"><img src="img/twitter.png" alt="icone twitter"></a></li>
+                <li><a href="http://facebook.com" target="_blank"><img src="./../img/facebook.png" alt="icone facebook"></a></li>
+                <li><a href="http://instagram.com" target="_blank"><img src="./../img/instagram.png" alt="icone instagram"></a></li>
+                <li><a href="http://twitter.com" target="_blank"><img src="./../img/twitter.png" alt="icone twitter"></a></li>
               </ul>
             </div>
           </div>
