--- a/view/pizzaria.html
+++ b/view/pizzaria.html
@@ -39,10 +39,10 @@
             <p>
             <h4>Por favor, escolha o tamanho da pizza:</h4>
             </p>
-            <input type="radio" class="tampizza" id="pequena" name="tamanho" value="Pequena" onclick="escolherTamanho();saidaTamanho()" /> Pequena 20cm - R$25,00<br />
-            <input type="radio" class="tampizza" id="media" name="tamanho" value="media" onclick="escolherTamanho();saidaTamanho()" /> Media 25cm - R$30,00<br />
-            <input type="radio" class="tampizza" id="gigante" name="tamanho" value="gigante" onclick="escolherTamanho();saidaTamanho()" /> Gigante 35cm - R$40,00<br />
-            <input type="radio" class="tampizza" id="familia" name="tamanho" value="familia" onclick="escolherTamanho();saidaTamanho()" /> Familia 40cm - R$45,00<br />
+            <input type="radio" class="tampizza" id="pequena" name="tamanho"/> Pequena 20cm - R$25,00<br />
+            <input type="radio" class="tampizza" id="media" name="tamanho"/> Media 25cm - R$30,00<br />
+            <input type="radio" class="tampizza" id="gigante" name="tamanho"/> Gigante 35cm - R$40,00<br />
+            <input type="radio" class="tampizza" id="familia" name="tamanho"/> Familia 40cm - R$45,00<br />
     
             <script>
             // var tamDaPizza;
@@ -218,6 +218,8 @@
     
     <div id="pedido" style="display: none;">
       <script>
+          
+                    
           // let nome = document.querySelector('nomeCliente').value;
           // let celular = document.querySelector('clienteCelular').value;
           // let endereco = document.querySelector('rua').value + "," + document.querySelector('numero').value + "," + document.querySelector('comp').value + "," + document.querySelector('bairro').value + "," + document.querySelector('pontoRef').value + ".";
